<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            style="@style/CusBase.style.size"
            android:layout_width="match_parent"
            android:layout_marginTop="5.0dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/title_dialog_choice"
            android:textSize="@dimen/size_text_app_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5sp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_librery"
            style="@style/CusBase.style.size"
            android:layout_width="match_parent"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:text="@string/title_dialog_choice_library"
            android:textSize="@dimen/size_text_app_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5sp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_capture"
            style="@style/CusBase.style.size"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/confirm_ui_padding_w"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:text="@string/title_dialog_choice_capture"
            android:textSize="@dimen/size_text_app_title" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_cancel"
        style="@style/CusButtonTheme"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/confirm_ui_padding_h"
        android:background="@drawable/btn_selector"
        android:text="@string/btn_new_job_cancel" />

</LinearLayout>