<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/CusTextViewTitleTheme"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/title_user_info_choose_service" />

    <ExpandableListView
        android:id="@+id/lv_history_warning"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="right|center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            style="@style/CusTextViewContentTheme"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="@dimen/confirm_ui_padding_h"
            android:paddingRight="@dimen/confirm_ui_padding_h"
            android:text="@string/btn_no"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_green_dark" />

        <TextView
            android:id="@+id/btn_accept"
            style="@style/CusTextViewContentTheme"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/confirm_ui_padding_h"
            android:paddingRight="@dimen/confirm_ui_padding_h"
            android:gravity="center"
            android:text="@string/btn_new_job_accept"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_green_dark" />
    </LinearLayout>
</LinearLayout>